Fix data not displaying after registration

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3 style="padding-top: 40px;">Hi, <span id="userNameWallet"></span> <br> <br> Enter your actual wallet: <br> <br> </h3>
 
                 <div class="alert alert-danger invisible" role="alert" id="invalidWallet" style="max-width: 500px; margin: auto; margin-bottom: 15px;">
-                        Enter a valid name!
+                    Enter a valid amount of money!
                 </div>
 
                 <div class="input-group mb-2" style="max-width: 500px; margin: auto;">
@@ -68,6 +68,7 @@
             </div>
         </div>
 
+        <!-- Main application -->
         <div class="app container invisible" id="app">
             <h3 style="padding-top: 20px;">Hi, <span id="userNameHeader"></span> </h3>
             <h1 id="userWalletHeader"></h1>
