--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
                 </tbody>
             </table>
 
+            <div id="piechart" style="max-width: 550px; margin: auto;"></div>
+
             <div class="actions">
                 <button type="button" class="btn btn-danger actions-btn" data-toggle="modal" data-target="#makeTransactionModal">
                     Make transaction
@@ -135,13 +137,13 @@
                         </div>
                         <select class="form-control" id="typeOfPayments">
                             <option value="default">Select the type of the payment...</option>
-                            <option value="general">General</option>
-                            <option value="eating-outside">Eating outside</option>
-                            <option value="public-transport">Public transport</option>
-                            <option value="animals">Animals</option>
-                            <option value="shopping">Shopping</option>
-                            <option value="clothes">Clothes</option>
-                            <option value="sport">Sport</option>
+                            <option value="General">General</option>
+                            <option value="Eating outside">Eating outside</option>
+                            <option value="Public transport">Public transport</option>
+                            <option value="Animals">Animals</option>
+                            <option value="Shopping">Shopping</option>
+                            <option value="Clothes">Clothes</option>
+                            <option value="Sport">Sport</option>
                         </select>
                     </div>
                     <div class="modal-footer">
@@ -188,7 +190,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         
+
         <!-- My custom JS -->
         <script src="js/app.js"></script>
+
+        <!-- Google charts CDN -->
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+        <script type="text/javascript" src="./js/loadChart.js"></script>
     </body>
 </html>
