Add new expenses categories

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Hello, world!</title>
+        <meta name="description" content="Shopping tracker is a web app where you can keep track of your expenses and see a beautiful graph of them!">
+        <title>Shopping Tracker</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -144,6 +145,10 @@
                             <option value="Shopping">Shopping</option>
                             <option value="Clothes">Clothes</option>
                             <option value="Sport">Sport</option>
+                            <option value="Sport">Tobacco</option>
+                            <option value="Sport">Bills</option>
+                            <option value="Sport">Subscriptions</option>
+                        
                         </select>
                     </div>
                     <div class="modal-footer">
