Bug fix (all the new categories were visualized under 'sport' cateogory

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                             <option value="Shopping">Shopping</option>
                             <option value="Clothes">Clothes</option>
                             <option value="Sport">Sport</option>
-                            <option value="Sport">Tobacco</option>
-                            <option value="Sport">Bills</option>
-                            <option value="Sport">Subscriptions</option>
+                            <option value="Tobacco">Tobacco</option>
+                            <option value="Bills">Bills</option>
+                            <option value="Subscriptions">Subscriptions</option>
                         
                         </select>
                     </div>
