Add 'travel' category and fix mobile UI bug

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                             <option value="Tobacco">Tobacco</option>
                             <option value="Bills">Bills</option>
                             <option value="Subscriptions">Subscriptions</option>
+                            <option value="Travels">Travels</option>
                         
                         </select>
                     </div>
